--- a/MiniaturesGallery/Views/Posts/Delete.cshtml
+++ b/MiniaturesGallery/Views/Posts/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MiniaturesGallery.Models.Post
+﻿@model MiniaturesGallery.Models.PostAbs
 
 @{
     ViewData["Title"] = "Delete";
@@ -31,34 +31,45 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Text)
         </dd>
-    </dl>
-
-    <div class="d-flex justify-content-center">
-        @foreach (var att in Model.Attachments)
+        @if (Model is Announcement)
         {
-            <button>
-                <a data-bs-toggle="modal" href="#imageModal_@att.ID">
-                    <img src="~/Files/@att.FullFileName" alt="@att.FileName" class="d-block" style="max-height: 50px; max-width: 50px">
-                </a>
-            </button>
-            <div class="modal fade" tabindex="-1" aria-hidden="true" id="imageModal_@att.ID">
-                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">@att.FileName</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="@Localizer["Close"]"></button>
-                        </div>
-                        <div class="modal-body d-flex align-items-center justify-content-center">
-                            <img src="~/Files/@att.FullFileName" alt="@att.FileName">
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@Localizer["Close"]</button>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => (model as Announcement).PrivateNote)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => (model as Announcement).PrivateNote)
+            </dd>
+        }
+    </dl>
+    @if(Model is Post)
+    {
+        <div class="d-flex justify-content-center">
+            @foreach (var att in (Model as Post).Attachments)
+            {
+                <button>
+                    <a data-bs-toggle="modal" href="#imageModal_@att.ID">
+                        <img src="~/Files/@att.FullFileName" alt="@att.FileName" class="d-block" style="max-height: 50px; max-width: 50px">
+                    </a>
+                </button>
+                <div class="modal fade" tabindex="-1" aria-hidden="true" id="imageModal_@att.ID">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">@att.FileName</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="@Localizer["Close"]"></button>
+                            </div>
+                            <div class="modal-body d-flex align-items-center justify-content-center">
+                                <img src="~/Files/@att.FullFileName" alt="@att.FileName">
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@Localizer["Close"]</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        }       
-    </div>
+            }
+        </div>
+    }
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
