--- a/MiniaturesGallery/Views/Posts/Edit.cshtml
+++ b/MiniaturesGallery/Views/Posts/Edit.cshtml
@@ -8,125 +8,138 @@
 }
 
 <h4 style="display: inline;">
-    [<a asp-action="Details" asp-route-id="@Model.Post.ID" class="text-info">@Localizer["Details"]</a>]
+    [<a asp-action="Details" asp-route-id="@Model.PostAbs.ID" class="text-info">@Localizer["Details"]</a>]
 </h4>
 <h4 style="display: inline;">
-    [<a asp-action="Delete" asp-route-id="@Model.Post.ID" class="text-danger">@Localizer["Delete"]</a>]
+    [<a asp-action="Delete" asp-route-id="@Model.PostAbs.ID" class="text-danger">@Localizer["Delete"]</a>]
 </h4>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Post.ID" />
+            <input type="hidden" asp-for="PostAbs.ID" />
             <div class="form-group">
-                <label asp-for="Post.Topic" class="control-label"></label>
-                <input asp-for="Post.Topic" class="form-control" />
-                <span asp-validation-for="Post.Topic" class="text-danger"></span>
+                <label asp-for="PostAbs.Topic" class="control-label"></label>
+                <input asp-for="PostAbs.Topic" class="form-control" />
+                <span asp-validation-for="PostAbs.Topic" class="text-danger"></span>
             </div>
             <hr />
-            <h6>@Html.DisplayFor(model => model.Post.CrateDate)</h6>
+            <h6>@Html.DisplayFor(model => model.PostAbs.CrateDate)</h6>
             <div class="form-group mb-2">
-                <label asp-for="Post.Text" class="control-label"></label>
-                <textarea asp-for="Post.Text" class="form-control" rows="4"></textarea>
-                <span asp-validation-for="Post.Text" class="text-danger"></span>
+                <label asp-for="PostAbs.Text" class="control-label"></label>
+                <textarea asp-for="PostAbs.Text" class="form-control" rows="4"></textarea>
+                <span asp-validation-for="PostAbs.Text" class="text-danger"></span>
             </div>
+            @if(Model.PostAbs is Announcement)
+            {
+                Announcement ann = Model.PostAbs as Announcement;
+                <div class="form-group mb-2">
+                    <label asp-for="@ann.PrivateNote" class="control-label"></label>
+                    <textarea asp-for="@ann.PrivateNote" class="form-control" rows="4"></textarea>
+                    <span asp-validation-for="@ann.PrivateNote" class="text-danger"></span>
+                </div>
+            }
             <div class="form-group mb-2">
                 <input type="submit" value="@Localizer["Save"]" class="btn btn-primary" />
             </div>
         </form>
     </div>
 
-    <hr />
-    <h5>@Localizer["Photos"]:</h5>
-    <div id="carouselImages" class="carousel slide carousel-fade">
-        <div class="carousel-inner">
-            @foreach (var att in Model.Post.Attachments)
-            {
-                string activeAttribute = "";
-                if (att == Model.Post.Attachments.First())
-                    activeAttribute = "active";
-                <div class="carousel-item @activeAttribute d-flex flex-column justify-content-center" style="height: 531px">
-                    <div class="d-flex align-self-center" style="height: 500px">
-                        <a data-bs-toggle="modal" href="#imageModal_@att.ID" class="align-self-center">
-                            <img src="~/Files/@att.FullFileName" alt="@att.FileName" class="d-block w-80" style="max-height: 500px">
-                        </a>
+    @if(Model.PostAbs is Post)
+    {
+        Post post = Model.PostAbs as Post;
+        <hr />
+        <h5>@Localizer["Photos"]:</h5>
+        <div id="carouselImages" class="carousel slide carousel-fade">
+            <div class="carousel-inner">
+                @foreach (var att in post.Attachments)
+                {
+                    string activeAttribute = "";
+                    if (att == post.Attachments.First())
+                        activeAttribute = "active";
+                    <div class="carousel-item @activeAttribute d-flex flex-column justify-content-center" style="height: 531px">
+                        <div class="d-flex align-self-center" style="height: 500px">
+                            <a data-bs-toggle="modal" href="#imageModal_@att.ID" class="align-self-center">
+                                <img src="~/Files/@att.FullFileName" alt="@att.FileName" class="d-block w-80" style="max-height: 500px">
+                            </a>
+                        </div>
+                        <div class="text-center">
+                            <a style="margin-right: 5px" href="~/Files/@att.FullFileName">@att.FileName</a>
+                            <form method="post" asp-controller="Posts" asp-action="DeleteAttachment" asp-route-id="@att.ID" data-confirm="@Localizer["Are you sure you want to delete this attachment?"]" style="display: contents">
+                                <button type="submit" class="btn btn-danger btn-sm">@Localizer["Delete"]</button>
+                            </form>
+                        </div>
                     </div>
-                    <div class="text-center">
-                        <a style="margin-right: 5px" href="~/Files/@att.FullFileName">@att.FileName</a>
-                        <form method="post" asp-controller="Posts" asp-action="DeleteAttachment" asp-route-id="@att.ID" data-confirm="@Localizer["Are you sure you want to delete this attachment?"]" style="display: contents">
-                            <button type="submit" class="btn btn-danger btn-sm">@Localizer["Delete"]</button>
-                        </form>
-                    </div>
-                </div>
-                <div class="modal fade" tabindex="-1" aria-hidden="true" id="imageModal_@att.ID">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title">@att.FileName</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="@Localizer["Close"]"></button>
-                            </div>
-                            <div class="modal-body d-flex align-items-center justify-content-center">
-                                <img src="~/Files/@att.FullFileName" alt="@att.FileName">
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@Localizer["Close"]</button>
+                    <div class="modal fade" tabindex="-1" aria-hidden="true" id="imageModal_@att.ID">
+                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">@att.FileName</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="@Localizer["Close"]"></button>
+                                </div>
+                                <div class="modal-body d-flex align-items-center justify-content-center">
+                                    <img src="~/Files/@att.FullFileName" alt="@att.FileName">
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@Localizer["Close"]</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            }
-        </div>
-        <div class="d-flex justify-content-center">
-            @{
-                int iterator = 0;
-                foreach (var att in Model.Post.Attachments)
-                {
-                    string cssClass = "";
-                    string cssAria = "";
-                    if (att == Model.Post.Attachments.First())
-                    {
-                        cssClass = "active";
-                        cssAria = "true";
-                    }
-
-                    <button type="button" data-bs-target="#carouselImages" data-bs-slide-to="@iterator" class="@cssClass" aria-current="@cssAria">
-                        <img src="~/Files/@att.FullFileName" alt="@att.FileName" class="d-block" style="max-height: 50px; max-width: 50px">
-                    </button>
-                    iterator++;
                 }
-            }
+            </div>
+            <div class="d-flex justify-content-center">
+                @{
+                    int iterator = 0;
+                    foreach (var att in post.Attachments)
+                    {
+                        string cssClass = "";
+                        string cssAria = "";
+                        if (att == post.Attachments.First())
+                        {
+                            cssClass = "active";
+                            cssAria = "true";
+                        }
+
+                        <button type="button" data-bs-target="#carouselImages" data-bs-slide-to="@iterator" class="@cssClass" aria-current="@cssAria">
+                            <img src="~/Files/@att.FullFileName" alt="@att.FileName" class="d-block" style="max-height: 50px; max-width: 50px">
+                        </button>
+                        iterator++;
+                    }
+                }
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselImages" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">@Localizer["Previous"]</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselImages" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">@Localizer["Next"]</span>
+            </button>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselImages" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">@Localizer["Previous"]</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselImages" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">@Localizer["Next"]</span>
-        </button>
-    </div>
 
-    <div class="text-center">
-        @Localizer["Rating:"] @Model.Post.Rating.ToString("n2") (@Model.Post.NoOfRates.ToString())
-    </div>
+        <div class="text-center">
+            @Localizer["Rating:"] @post.Rating.ToString("n2") (@post.NoOfRates.ToString())
+        </div>
 
-    <hr />
+        <hr />
 
-    <div class="col-md-4">
-        <form asp-action="AddAttachment" asp-route-id="@Model.Post.ID" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label class="control-label">@Localizer["Add Photo"]:</label>
-                <div class="custom-file">
-                    <input asp-for="Files" placeholder="" multiple class="form-control custom-file-input" accept="image/png, image/gif, image/jpeg" />
-                    <label class="custom-file-label">@Localizer["Chose files..."]</label>
+        <div class="col-md-4">
+            <form asp-action="AddAttachment" asp-route-id="@post.ID" enctype="multipart/form-data">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label class="control-label">@Localizer["Add Photo"]:</label>
+                    <div class="custom-file">
+                        <input asp-for="Files" placeholder="" multiple class="form-control custom-file-input" accept="image/png, image/gif, image/jpeg" />
+                        <label class="custom-file-label">@Localizer["Chose files..."]</label>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="@Localizer["Add Chosen Files"]" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+                <div class="form-group">
+                    <input type="submit" value="@Localizer["Add Chosen Files"]" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+    }  
 </div>
 
 @section Scripts {
