--- a/MiniaturesGallery/Views/Shared/_Layout.cshtml
+++ b/MiniaturesGallery/Views/Shared/_Layout.cshtml
@@ -36,12 +36,12 @@
                                     <a class="dropdown-item" asp-controller="Posts" asp-action="ScrollIndex">@Localizer["ScrollIndex"]</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" asp-controller="Posts" asp-action="Create">@Localizer["Add Post"]</a>
+                                    <a class="dropdown-item" asp-controller="Posts" asp-action="CreatePost">@Localizer["Add Post"]</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" asp-controller="Posts" asp-action="CreateAnnouncement">@Localizer["Add Announcement"]</a>
                                 </li>
                             </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="PostsAngular" asp-action="IndexAngular">@Localizer["Posts"] AngularJS</a>
                         </li>
                     </ul>
                     <partial name="_SelectLanguagePartial" />
